begin styling board show, fix text overflow in boards dropdown

--- a/app/assets/stylesheets/base/mixins.scss
+++ b/app/assets/stylesheets/base/mixins.scss
@@ -37,6 +37,4 @@
   padding: 0.6rem 1.3rem;
 }
 
-@mixin default-checkbox {
-
-}
+@mixin default-checkbox {}
