--- a/app/assets/stylesheets/styles/board_index.scss
+++ b/app/assets/stylesheets/styles/board_index.scss
@@ -1,8 +1,9 @@
 .boards-view {
   display: inline-block;
   width: 100%;
+  margin-top: 1%;
   padding: 0.8rem;
-  padding-right: 0.4rem;
+  padding-right: 0;
 }
 .index-container{
   display: inline-block;
